Simplify logger packet sending